--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
 			<div class="advant_wrapper">
 				<div class="advant_block">
 					<div class="advant_img">
-						<img src="./img/advant/1.png" alt="">
+						<img src="./img/advant/1.jpg" alt="">
 					</div>
 
 					<div class="advant_title">
@@ -984,7 +984,7 @@
 
 				<div class="advant_block">
 					<div class="advant_img">
-						<img src="./img/advant/2.png" alt="">
+						<img src="./img/advant/2.jpg" alt="">
 					</div>
 
 					<div class="advant_title">
@@ -997,7 +997,7 @@
 
 				<div class="advant_block">
 					<div class="advant_img">
-						<img src="./img/advant/3.png" alt="">
+						<img src="./img/advant/3.jpg" alt="">
 					</div>
 
 					<div class="advant_title">
