--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<ul class="page_nav">
 			<li><a href="index1.html" target="_blank">Главная</a></li>
 			<li><a href="index2.html" target="_blank">Каталог</a></li>
+			<li><a href="index3.html" target="_blank">Страница товара</a></li>
 		</ul>
 	</div>
 </div>
