--- a/index2.html
+++ b/index2.html
@@ -21,359 +21,365 @@
 </head>
 <body>
 
-	<header class="header">
-		<div class="header_top">
-			<div class="container">
-				<div class="header_top_wrap">
-					<div class="header_top_menu">
-						<a href="">Бренды</a>
-						<a href="">Акции</a>
-						<a href="">Магазины</a>
-						<a href="">Пользователям</a>
-					</div>
-					<div class="header_top_contacts">
-						<a class="addr" href="#">Нижний Новгород</a>
-						<a class="phone" href="tel:">8 (800) 700 83 23</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="header_wrapper">
-			<div class="container">
-				<div class="header_wrap">
-					<div class="header_logo">
-						<a href="#">
-							<img src="./img/logo.svg" alt="">
-						</a>
-					</div>
-
-					<div class="menu_btn">
-						<div>
-							<span></span>
-							<span></span>
-							<span></span>
-						</div>
-						<p>Каталог</p>
-					</div>
-
-					<div class="header_search">
-						<input type="text" placeholder="Поиск по сайту">
-						<button class="submit"></button>
-					</div>
-				</div>
-
-				<div class="header_admin">
-					<a href="#" class="favourites"><span>Избранное</span></a>
-					<a href="#" class="admin"><span>Профиль</span></a>
-					<a href="#" class="cart"><span>Корзина</span></a>
-				</div>
-			</div>
-		</div>
-
-		<div class="menu_wrap">
-			<div class="container">
-				<div class="menu">
-					<a href="">Распродажа</a>
-					<a href="">Игрушки для секса</a>
-					<a href="">Эротические подарки</a>
-					<a href="">Интимная косметика</a>
-					<a href="">BDSM</a>
-					<a href="">Эротическая одежда</a>
-					<a href="">Возбуждающие препараты</a>
-					<a href="">Презервативы</a>
-					<a href="">Интимная  гигиена</a>
-				</div>
-			</div>
-		</div>
-	</header>
-
-	<div class="menu_wrapper">
+<header class="header">
+	<div class="header_top">
 		<div class="container">
-			<ul class="menu_nav">
-				<li class="menu_nav_top active" menu-nav="1">
-					<a href="#" class="menu_nav_btn ico1">Распродажа</a>
+			<div class="header_top_wrap">
+				<div class="header_top_menu">
+					<a href="">Бренды</a>
+					<a href="">Акции</a>
+					<a href="">Магазины</a>
+					<a href="">Пользователям</a>
+				</div>
+				<div class="header_top_contacts">
+					<a class="addr" href="#">Нижний Новгород</a>
+					<a class="phone" href="tel:">8 (800) 700 83 23</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="header_wrapper">
+		<div class="container">
+			<div class="header_wrap">
+				<div class="header_logo">
+					<a href="#">
+						<img src="./img/logo.svg" alt="">
+					</a>
+				</div>
 
-					<div class="menu_nav_list active" menu-nav="1">
-						<ul>
-							<li>
-								<a href="#"><b>Анальные игрушки</b></a>
-								<a href="#">Анальные пробки</a>
-								<a href="#">Анальные расширители</a>
-								<a href="#">Анальные шарики</a>
-								<a href="#">Массажеры простаты</a>
-							</li>
-							<li>
-								<a href="#"><b>Вакуумные помпы</b></a>
-								<a href="#">Помпы для женщин</a>
-								<a href="#">Помпы для мужчин</a>
-							</li>
-							<li>
-								<a href="#"><b>Вибраторы</b></a>
-								<a href="#">Вибраторы</a>
-								<a href="#">Вибраторы для пар</a>
-								<a href="#">Виброяйца</a>
-								<a href="#">Массажеры Wand</a>
-								<a href="#">Стимуляторы клитора</a>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<a href="#"><b>Мастурбаторы</b></a>
-								<a href="#">Мастурбаторы</a>
-								<a href="#">Автоматические мастурбаторы</a>
-							</li>
-							<li>
-								<a href="#"><b>Насадки и кольца</b></a>
-								<a href="#">Для двойного проникновения</a>
-								<a href="#">Насадки на пальцы и язык</a>
-								<a href="#">Насадки на член</a>
-								<a href="#">Эрекционные кольца</a>
-							</li>
-							<li>
-								<a href="#"><b>Секс-куклы</b></a>
-								<a href="#">Надувные секс-куклы</a>
-								<a href="#">Real Doll</a>
-							</li>
-							<li>
-								<a href="#"><b>Секс-машины</b></a>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<a href="#"><b>Страпоны</b></a>
-							</li>
-							<li>
-								<a href="#"><b>Тренажеры интимных мышц</b></a>
-								<a href="#">Тренажеры Кегеля</a>
-								<a href="#">Вагинальные шарики</a>
-							</li>
-							<li>
-								<a href="#"><b>Уход за игрушками</b></a>
-							</li>
-							<li>
-								<a href="#"><b>Фаллоимитаторы</b></a>
-							</li>
-							<li>
-								<a href="#"><b>Фаллопротезы</b></a>
-							</li>
-							<li>
-								<a href="#"><b>Фистинг</b></a>
-							</li>
-						</ul>
-						<ul>
-							<li>
-								<a href="#"><b>Экстендеры</b></a>
-							</li>
-							<li>
-								<a href="#"><b>Электростимуляция</b></a>
-							</li>
-						</ul>
+				<div class="menu_btn">
+					<div>
+						<span></span>
+						<span></span>
+						<span></span>
 					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="2">
-					<a href="#" class="menu_nav_btn ico2">Популярное</a>
+					<p>Каталог</p>
+				</div>
 
-					<div class="menu_nav_list" menu-nav="2">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="3">
-					<a href="#" class="menu_nav_btn ico3">Игрушки для секса</a>
+				<div class="header_search">
+					<input type="text" placeholder="Поиск по сайту">
+					<button class="submit"></button>
+				</div>
 
-					<div class="menu_nav_list" menu-nav="3">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="4">
-					<a href="#" class="menu_nav_btn ico4">Эротические подарки</a>
+				<a href="tel:" class="header_mob_phone"></a>
+			</div>
 
-					<div class="menu_nav_list" menu-nav="4">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="5">
-					<a href="#" class="menu_nav_btn ico5">Интимная косметика</a>
-
-					<div class="menu_nav_list" menu-nav="5">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="6">
-					<a href="#" class="menu_nav_btn ico6">BDSM</a>
-
-					<div class="menu_nav_list" menu-nav="5">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="7">
-					<a href="#" class="menu_nav_btn ico7">Эротическая одежда</a>
-
-					<div class="menu_nav_list" menu-nav="7">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="8">
-					<a href="#" class="menu_nav_btn ico8">Возбуждающие препараты</a>
-
-					<div class="menu_nav_list" menu-nav="8">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="9">
-					<a href="#" class="menu_nav_btn ico9">Презервативы</a>
-
-					<div class="menu_nav_list" menu-nav="9">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="10">
-					<a href="#" class="menu_nav_btn ico10">Интимная гигиена</a>
-
-					<div class="menu_nav_list" menu-nav="10">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-				<li class="menu_nav_top" menu-nav="11">
-					<a href="#" class="menu_nav_btn ico11">Наборы</a>
-
-					<div class="menu_nav_list" menu-nav="11">
-						<ul>
-							<li>
-								<a href="#"><b>item</b></a>
-								<a href="#">item1</a>
-								<a href="#">item2</a>
-								<a href="#">item3</a>
-							</li>
-						</ul>
-					</div>
-				</li>
-			</ul>
+			<div class="header_admin">
+				<a href="#" class="favourites"><span>Избранное</span></a>
+				<a href="#" class="admin"><span>Профиль</span></a>
+				<a href="#" class="cart"><span>Корзина</span></a>
+			</div>
 		</div>
 	</div>
 
-	<script>
-		$(".menu_btn").click(function () {
-			$(this).toggleClass('active');
-			$('.menu_wrapper').toggleClass('active');
-		});
-
-		$(".menu_nav_top").click(function () {
-			let _parent = $(this).closest(".menu_nav_top");
-
-			var menuNav = $(this).attr('menu-nav'),
-				menuList = $('.menu_nav_list[menu-nav="'+ menuNav +'"]');
-			$('.menu_nav_list').removeClass('active');
-			$('.menu_nav_top').removeClass('active');
-			$(this, _parent).addClass('active');
-			menuList.addClass('active');
-		});
-	</script>
-	
-	<section class="menu_catalog">
+	<div class="menu_wrap">
 		<div class="container">
-			<div class="menu_catalog_wrap">
-				<a href="#" class="menu_catalog_item">
-					<div class="menu_catalog_img">
-						<img src="./img/menu_catalog/1.png" alt="">
-					</div>
-					<span>Акции</span>
-				</a>
-				<a href="#" class="menu_catalog_item">
-					<div class="menu_catalog_img">
-						<img src="./img/menu_catalog/2.png" alt="">
-					</div>
-					<span>BDSM</span>
-				</a>
-				<a href="#" class="menu_catalog_item">
-					<div class="menu_catalog_img">
-						<img src="./img/menu_catalog/3.png" alt="">
-					</div>
-					<span>Секс-игрушки</span>
-				</a>
-				<a href="#" class="menu_catalog_item">
-					<div class="menu_catalog_img">
-						<img src="./img/menu_catalog/4.png" alt="">
-					</div>
-					<span>Косметика</span>
-				</a>
-				<a href="#" class="menu_catalog_item">
-					<div class="menu_catalog_img">
-						<img src="./img/menu_catalog/5.png" alt="">
-					</div>
-					<span>Обзоры белья</span>
-				</a>
-				<a href="#" class="menu_catalog_item">
-					<div class="menu_catalog_img">
-						<img src="./img/menu_catalog/6.png" alt="">
-					</div>
-					<span>Магазины</span>
-				</a>
+			<div class="menu">
+				<a href="">Распродажа</a>
+				<a href="">Игрушки для секса</a>
+				<a href="">Эротические подарки</a>
+				<a href="">Интимная косметика</a>
+				<a href="">BDSM</a>
+				<a href="">Эротическая одежда</a>
+				<a href="">Возбуждающие препараты</a>
+				<a href="">Презервативы</a>
+				<a href="">Интимная  гигиена</a>
 			</div>
 		</div>
-	</section>
+	</div>
+</header>
+
+<div class="menu_wrapper">
+	<div class="container">
+		<div class="menu_btn_close">
+			<div>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+		<ul class="menu_nav">
+
+			<li class="menu_nav_addr">
+				Нижний Новгород
+			</li>
+
+			<div class="header_search header_search_menu">
+				<input type="text" placeholder="Поиск по сайту">
+				<button class="submit"></button>
+			</div>
+
+			<li class="menu_nav_tabs">
+				<a href="#" class="active">Каталог</a>
+				<a href="#">Информация</a>
+			</li>
+
+
+			<li class="menu_nav_top active" menu-nav="1">
+				<a href="#" class="menu_nav_btn ico1">Распродажа</a>
+
+				<div class="menu_nav_list active" menu-nav="1">
+					<ul>
+						<li>
+							<a href="#"><b>Анальные игрушки</b></a>
+							<a href="#">Анальные пробки</a>
+							<a href="#">Анальные расширители</a>
+							<a href="#">Анальные шарики</a>
+							<a href="#">Массажеры простаты</a>
+						</li>
+						<li>
+							<a href="#"><b>Вакуумные помпы</b></a>
+							<a href="#">Помпы для женщин</a>
+							<a href="#">Помпы для мужчин</a>
+						</li>
+						<li>
+							<a href="#"><b>Вибраторы</b></a>
+							<a href="#">Вибраторы</a>
+							<a href="#">Вибраторы для пар</a>
+							<a href="#">Виброяйца</a>
+							<a href="#">Массажеры Wand</a>
+							<a href="#">Стимуляторы клитора</a>
+						</li>
+					</ul>
+					<ul>
+						<li>
+							<a href="#"><b>Мастурбаторы</b></a>
+							<a href="#">Мастурбаторы</a>
+							<a href="#">Автоматические мастурбаторы</a>
+						</li>
+						<li>
+							<a href="#"><b>Насадки и кольца</b></a>
+							<a href="#">Для двойного проникновения</a>
+							<a href="#">Насадки на пальцы и язык</a>
+							<a href="#">Насадки на член</a>
+							<a href="#">Эрекционные кольца</a>
+						</li>
+						<li>
+							<a href="#"><b>Секс-куклы</b></a>
+							<a href="#">Надувные секс-куклы</a>
+							<a href="#">Real Doll</a>
+						</li>
+						<li>
+							<a href="#"><b>Секс-машины</b></a>
+						</li>
+					</ul>
+					<ul>
+						<li>
+							<a href="#"><b>Страпоны</b></a>
+						</li>
+						<li>
+							<a href="#"><b>Тренажеры интимных мышц</b></a>
+							<a href="#">Тренажеры Кегеля</a>
+							<a href="#">Вагинальные шарики</a>
+						</li>
+						<li>
+							<a href="#"><b>Уход за игрушками</b></a>
+						</li>
+						<li>
+							<a href="#"><b>Фаллоимитаторы</b></a>
+						</li>
+						<li>
+							<a href="#"><b>Фаллопротезы</b></a>
+						</li>
+						<li>
+							<a href="#"><b>Фистинг</b></a>
+						</li>
+					</ul>
+					<ul>
+						<li>
+							<a href="#"><b>Экстендеры</b></a>
+						</li>
+						<li>
+							<a href="#"><b>Электростимуляция</b></a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="2">
+				<a href="#" class="menu_nav_btn ico2">Популярное</a>
+
+				<div class="menu_nav_list" menu-nav="2">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="3">
+				<a href="#" class="menu_nav_btn ico3">Игрушки для секса</a>
+
+				<div class="menu_nav_list" menu-nav="3">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="4">
+				<a href="#" class="menu_nav_btn ico4">Эротические подарки</a>
+
+				<div class="menu_nav_list" menu-nav="4">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="5">
+				<a href="#" class="menu_nav_btn ico5">Интимная косметика</a>
+
+				<div class="menu_nav_list" menu-nav="5">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="6">
+				<a href="#" class="menu_nav_btn ico6">BDSM</a>
+
+				<div class="menu_nav_list" menu-nav="5">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="7">
+				<a href="#" class="menu_nav_btn ico7">Эротическая одежда</a>
+
+				<div class="menu_nav_list" menu-nav="7">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="8">
+				<a href="#" class="menu_nav_btn ico8">Возбуждающие препараты</a>
+
+				<div class="menu_nav_list" menu-nav="8">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="9">
+				<a href="#" class="menu_nav_btn ico9">Презервативы</a>
+
+				<div class="menu_nav_list" menu-nav="9">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="10">
+				<a href="#" class="menu_nav_btn ico10">Интимная гигиена</a>
+
+				<div class="menu_nav_list" menu-nav="10">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="menu_nav_top" menu-nav="11">
+				<a href="#" class="menu_nav_btn ico11">Наборы</a>
+
+				<div class="menu_nav_list" menu-nav="11">
+					<ul>
+						<li>
+							<a href="#"><b>item</b></a>
+							<a href="#">item1</a>
+							<a href="#">item2</a>
+							<a href="#">item3</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
+
+<section class="menu_catalog">
+	<div class="container">
+		<div class="menu_catalog_wrap">
+			<a href="#" class="menu_catalog_item">
+				<div class="menu_catalog_img">
+					<img src="./img/menu_catalog/1.png" alt="">
+				</div>
+				<span>Акции</span>
+			</a>
+			<a href="#" class="menu_catalog_item">
+				<div class="menu_catalog_img">
+					<img src="./img/menu_catalog/2.png" alt="">
+				</div>
+				<span>BDSM</span>
+			</a>
+			<a href="#" class="menu_catalog_item">
+				<div class="menu_catalog_img">
+					<img src="./img/menu_catalog/3.png" alt="">
+				</div>
+				<span>Секс-игрушки</span>
+			</a>
+			<a href="#" class="menu_catalog_item">
+				<div class="menu_catalog_img">
+					<img src="./img/menu_catalog/4.png" alt="">
+				</div>
+				<span>Косметика</span>
+			</a>
+			<a href="#" class="menu_catalog_item">
+				<div class="menu_catalog_img">
+					<img src="./img/menu_catalog/5.png" alt="">
+				</div>
+				<span>Обзоры белья</span>
+			</a>
+			<a href="#" class="menu_catalog_item">
+				<div class="menu_catalog_img">
+					<img src="./img/menu_catalog/6.png" alt="">
+				</div>
+				<span>Магазины</span>
+			</a>
+		</div>
+	</div>
+</section>
 
 	<section class="page_catalog">
 		<div class="container">
@@ -1416,6 +1422,52 @@
 			</div>
 		</div>
 	</footer>
+
+<script>
+	if ($(window).width() < 991) {
+		$('.page_catalog_category').slick({
+			arrows: true,
+			dots: false,
+			infinite: false,
+			slidesToShow: 5,
+			slidesToScroll: 1,
+			responsive: [
+				{
+					breakpoint: 768,
+					settings: {
+						slidesToShow: 4,
+					}
+				},
+				{
+					breakpoint: 320,
+					settings: {
+						slidesToShow: 2,
+					}
+				},
+			]
+		});
+	}
+</script>
+
+<script>
+	if ($(window).width() < 991) {
+		$('.menu_catalog_wrap').slick({
+			arrows: false,
+			dots: true,
+			infinite: false,
+			slidesToShow: 5,
+			slidesToScroll: 1,
+			responsive: [
+				{
+					breakpoint: 768,
+					settings: {
+						slidesToShow: 4,
+					}
+				},
+			]
+		});
+	}
+</script>
 
 </body>
 </html>
