--- a/index1.html
+++ b/index1.html
@@ -17,6 +17,28 @@
 	<script type="text/javascript" src="js/script.js"></script>
 
 	<link href="./css/font-awesome.min.css" rel="stylesheet">
+
+	<style>
+		.container {
+			max-width: 1440px;
+		}
+		.category1_item span {
+			font-size: calc(4px + 0.8vw);
+			bottom: 0.5vw;
+			left: 0.5vw;
+		}
+		.category2_item {
+			width: 28%;
+			padding-left: 2vw;
+			font-size: calc(12px + 0.8vw);
+		}
+		.catalog_block {
+			width: 23%;
+		}
+		.articles_img {
+			height: 280px;
+		}
+	</style>
 </head>
 <body>
 
