--- a/index1.html
+++ b/index1.html
@@ -22,6 +22,15 @@
 		.container {
 			max-width: 1440px;
 		}
+		.banner_title .title1 {
+			font-size: 42px;
+		}
+		.banner_title .title2 {
+			font-size: 26px;
+		}
+		.banner .banner_btn {
+			margin-left: 50px;
+		}
 		.category1_item span {
 			font-size: calc(4px + 0.8vw);
 			bottom: 0.5vw;
